@startuml

title __BANK's Class Diagram__\n

  package com.formation.start {
    package com.formation.start.bank {
      class Account {
          - number : String
          - bank : String
          - balance : int
          - interestRate : int
          - transactionList : ArrayList<Transaction>
          - isActive : boolean
          - isBlocked : boolean
          - id : int
          - creationDate : Date
          + Account()
          + Account()
          + toString()
          + getNumber()
          + getBank()
          + getClient()
          + setClient()
          + setBalance()
          + getInterestRate()
          + setInterestRate()
          + isActive()
          + isBlocked()
          + getId()
          + getCreationDate()
          + displayRIB()
          + debit()
          + credit()
          + getBalance()
          + addInterest()
          + withdraw()
          + block()
          + unblock()
          + close()
          + getTransactionList()
          + printTransactionList()
          + transfer()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.bank {
      class Client {
          {static} - compteur : int
          - id : int
          - firstName : String
          - lastName : String
          + Client()
          {static} + getCompteur()
          + getId()
          + getFirstName()
          + setFirstName()
          + getLastName()
          + setLastName()
          + toString()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.bank {
      class Main {
          {static} + main()
      }
    }
  }
  

  package com.formation.start {
    package com.formation.start.bank {
      class Transaction {
          {static} - compteur : int
          - id : int
          - date : Date
          - amount : int
          + Transaction()
          + Transaction()
          + getId()
          + getDate()
          + getAmount()
          + toString()
          + getToAccount()
          + setToAccount()
          + getFromAccount()
          + setFromAccount()
      }
    }
  }
  

  Account o-- Client : client
  Transaction o-- Account : toAccount
  Transaction o-- Account : fromAccount


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
